== 0.6.4 2010-03-30

=== Bugfixes
* Better handling of --guess with optional capture groups (Tim Felgentreff)
* Parsing of rerun.txt can't use Shellwords on Windows (#581 David Esposito)
* #announce can now take non-String arguments just like Kernel#puts - #to_s is done implicitly. (Aslak Hellesøy)
* Attempt to fix Cucumber::CODEPAGE error again for Windows (#561 Aslak Hellesøy)
* Tab indentation causes multiline step arguments to fail (#585 Aslak Hellesøy)
* Properly pass tags over the wire protocol (Matt Wynne)
* Profile loading should honour the --strict option (#580 Rob Holland)
* Snippets are properly printed when using '*' as step keyword. (Used to cause infinite recursion). (Aslak Hellesøy)

=== New features
* Added #announce_world method, printing the World class and all included modules (Ruby only). (Aslak Hellesøy)
* Added #announce to the PDF formatter (Nicolas Bessi)
* Show fails for After/Before hooks in the progress formatter (#584 Joseph Wilk)

== Changed features
* Switced to ISO 639-1 (language) and ISO 3166 alpha-2 (region - if applicable). Applies to Catalan,
  Swedish, Welsh, Romanian and Serbian. (Aslak Hellesøy)

== 0.6.3 2010-03-02

=== Bugfixes
* Split arguments in cucumber.yml with shellwords. Example: myprofile: --out="Features report.html" (Nathaniel Haas)
* Breakage in Rails 2-3-stable after html_safe is added to the repo. (#577 Aslak Hellesøy)
* uninitialized constant Cucumber::CODEPAGE (NameError) (#561 Aslak Hellesøy)
* HTML Formatter is broken in cucumber 0.6.2 and cuke4duke 0.2.3 (#567 Dan Fitch)
* Ensure consistent load order of support files (#564 Mike Sassak)
* Fix various places in PDF formatter where HTML entities could break prawn (Matt Wynne)
* The rerun formatter outputs failed, pending and undefined scenarios (before: only failing) (Aslak Hellesøy)

=== New features
* Added "Angenommen" as German synonym for Given (Sven Fuchs, Aslak Hellesøy)