@@ -1,5 +1,7 @@
-<form method='post' action='/add'>
-  <input name='first'/>
-  <input name='second'/>
-  <input type='submit' value='Add'/>
+<form method="post" action="/add">
+  <label for="first">First</label>
+  <input id="first" name="first" type="text"/>
+  <label for="second">Second</label>
+  <input id="second" name="second" type="text"/>
+  <input type="submit" value="Add"/>
 </form>
